  and enhanced), wxSimpleHtmlListBox, wxHyperlinkCtrl, wxColourPickerCtrl,
  wxDirPickerCtrl, wxFilePickerCtrl, wxFontPickerCtrl, wxCollapsiblePane,
  wxSearchCtrl, wxAboutBox, wxTreebook, tar streams.


2.8.9
-----

All:

- Optimize wxString::Replace() for single character arguments.
- Updated Hindi translation (Priyank Bolia).

All (GUI):

- Fixed help viewer bug whereby the splitter sash in wxHtmlHelpWindow could
  go underneath the left-hand pane, permanently, after resizing the
  help window.
- Fixed wxHTML default font size for printing to be 12pt regardless of the
  platform, instead of depending on GUI toolkit's screen configuration.
- Support wxDP_ALLOWNONE style in generic wxDatePickerCtrl version.
- Set wxKeyEvent::m_uniChar correctly in the events generated by generic
  wxListCtrl (Mikkel S).
- Fix changing size of merged cells in wxGrid (Laurent Humbertclaude).
- Fixed wrapping bug in wxRichTextCtrl when there were images present;
  now sets the cursor to the next line after pressing Shift+Enter.
- Fix crash when reading malformed PCX images.

All (Unix):

- MIME types reading fixed when running under GNOME, reading .desktop
  files and also the default application list.
- Added filesys.no-mimetypesmanager system option so that applications that
  must load an XRC file at program startup don't have to incur the
  mime types manager initialization penalty.

wxMSW:

- Potentially incompatible change: wxExecute() arguments are now quoted if they
  contain spaces and existing quotes are escaped with a backslash. However, to
  preserve compatibility, the argument is unchanged if it is already quoted.
  Notice that this behaviour will change in wxWidgets 3.0 where all arguments
  will be quoted, please update your code now if you are affected and use only
  wxWidgets 2.8.9 or later.
- Fix keyboard support in wxSpinCtrl broken in 2.8.8.
- Compile fix for WinCE in window.cpp (no VkKeyScan in Windows CE).